metrique/tests/ui/fail/bad_metrics_value.stderr
error: Only structs are supported for entries
 --> tests/ui/fail/bad_metrics_value.rs:4:1
  |
4 | / enum Foo {
5 | | }
  | |_^

error: Only enums are supported with value(string)
 --> tests/ui/fail/bad_metrics_value.rs:8:1
  |
8 | / struct Bar {
9 | | }
  | |_^

error: multiple non-ignored fields for #[metrics(value)]
  --> tests/ui/fail/bad_metrics_value.rs:14:5
   |
14 |     y: u32,
   |     ^

error: `name` does not make sense with #[metrics(value)]
  --> tests/ui/fail/bad_metrics_value.rs:33:5
   |
33 |     u32,
   |     ^^^

error: Unknown field: `p`
  --> tests/ui/fail/bad_metrics_value.rs:38:15
   |
38 |     #[metrics(p = q)]
   |               ^

error: prefix is not supported for #[metrics(value)]
  --> tests/ui/fail/bad_metrics_value.rs:43:8
   |
43 | struct Baz6 {
   |        ^^^^

error: prefix is not supported for #[metrics(value)]
  --> tests/ui/fail/bad_metrics_value.rs:48:8
   |
48 | struct Baz7 {
   |        ^^^^

error: Only named fields are supported
  --> tests/ui/fail/bad_metrics_value.rs:53:1
   |
53 | struct Unit; /* not supported right now */
   | ^^^^^^^^^^^^

error: Unknown field: `p`. Available values: `name`
  --> tests/ui/fail/bad_metrics_value.rs:57:15
   |
57 |     #[metrics(p="q")]
   |               ^

error: Cannot combine `value` with `subfield`
  --> tests/ui/fail/bad_metrics_value.rs:61:26
   |
61 | #[metrics(value(string), subfield)]
   |                          ^^^^^^^^

error: entry enums cannot have unit variants; use #[metrics(value(string))] for unit-only enums
  --> tests/ui/fail/bad_metrics_value.rs:63:5
   |
63 |     X
   |     ^

error: value does not make sense with dimension-sets
  --> tests/ui/fail/bad_metrics_value.rs:66:1
   |
66 | #[metrics(value(string), emf::dimension_sets = [["X"]])]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `metrics` (in Nightly builds, run with -Z macro-backtrace for more info)

error: entry enums cannot have unit variants; use #[metrics(value(string))] for unit-only enums
  --> tests/ui/fail/bad_metrics_value.rs:68:5
   |
68 |     X
   |     ^

error[E0412]: cannot find type `Second` in this scope
  --> tests/ui/fail/bad_metrics_value.rs:19:22
   |
19 |     #[metrics(unit = Second)]
   |                      ^^^^^^
   |
  ::: $RUST/core/src/marker.rs
   |
   | pub unsafe auto trait Send {
   | -------------------------- similarly named trait `Send` defined here
   |
help: a trait with a similar name exists
   |
19 -     #[metrics(unit = Second)]
19 +     #[metrics(unit = Send)]
   |
help: consider importing one of these structs
   |
1  + use metrique::writer::unit::Second;
   |
1  + use metrique_writer::unit::Second;
   |
1  + use metrique_writer_core::unit::Second;
   |

error[E0277]: `String` cannot be used as a sample group
  --> tests/ui/fail/bad_metrics_value.rs:78:15
   |
78 |       #[metrics(sample_group)]
   |                 ^-----------
   |                 |
   |  _______________required by a bound introduced by this call
   | |
79 | |     group: String,
   | |_________^ the trait `SampleGroup` is not implemented for `String`
   |
   = note: sample groups must implement `SampleGroup`
   = note: consider using `&'static str` instead of `String`, or make a new type that implements `SampleGroup`
   = help: the trait `SampleGroup` is implemented for `&str`

error[E0277]: `FormattedValue<'_, u32, Foo, _>` is not a metric value
  --> tests/ui/fail/bad_metrics_value.rs:26:5
   |
26 |     x: u32,
   |     ^ the trait `Value` is not implemented for `FormattedValue<'_, u32, Foo, _>`
   |
   = note: If `FormattedValue<'_, u32, Foo, _>` is a metric *entry*, flatten it using `#[metrics(flatten)]`
   = help: the following other types implement trait `Value`:
             &T
             Arc<T>
             Baz2Value
             Baz3Value
             Box<T>
             Cow<'_, T>
             Distribution<V, N>
             Duration
           and $N others

error[E0277]: CloseValue is not implemented for &String
  --> tests/ui/fail/bad_metrics_value.rs:73:5
   |
73 |     field: String,
   |     ^^^^^ This type must implement `CloseValue`
   |
   = help: the trait `CloseValue` is not implemented for `&String`
   = note: You may need to add `#[metrics]` to `&String` or implement `CloseValue` directly.
   = note: if &String implements `Value` but not `CloseValue`, add `#[metrics(no_close)]`
help: consider dereferencing here
   |
73 |     *field: String,
   |     +
